# FastApi

./: .gitignore  README.md  pyproject.toml
src/app/: cli.py  collector.py  config.py  hotspot.py  main.py  models.py  repository.py  scheduler.py  service.py
src/app/api/: __init__.py  public_routes.py  routes.py
tests/: test_api.py  test_collector.py  test_hotspot.py
