[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hot-topics-fastapi"
version = "0.1.0"
description = "FastAPI project for collecting daily AI hot topics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115,<1.0",
    "feedparser>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "requests>=2.32,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
ai-hot-topics-collect = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
